--- a/budget accounting/MainWindow.xaml
+++ b/budget accounting/MainWindow.xaml
@@ -22,12 +22,9 @@
         
         
         <DatePicker x:Name="DatePick" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" Grid.ColumnSpan="2" />
-        <DataGrid x:Name="DataGridMenu"  Grid.Column="0" Grid.Row="1"  Grid.RowSpan="3" >
-            <DataGrid.Columns>
-               
-
-            </DataGrid.Columns>
-        </DataGrid>
+        <DataGrid x:Name="DataGridMenu"  Grid.Column="0" Grid.Row="1"  Grid.RowSpan="3" SelectionChanged="DataGrid_DataChange" AutoGeneratingColumn="DataGrid_AutoGeneratingColumn"/> 
+            
+       
         
         
         <TextBlock Grid.Row="1" Grid.Column="1" Margin="0,10,0,0" HorizontalAlignment ="Stretch"  TextAlignment="Center"  Text="Название записи:" VerticalAlignment="Top"></TextBlock>
@@ -49,13 +46,14 @@
         <TextBox x:Name="summ_money" Grid.Row="3" Grid.Column="1" Margin="10,30,10,0" VerticalAlignment="Top"></TextBox>
         
         <Button x:Name="Add_new_note" Grid.Row="3" Grid.Column="1"  Margin="10,0,10,2" Content = "Добавить" VerticalAlignment="Bottom" Click="Add_new_note_Click"></Button>
-        <Button x:Name="Change_your_" Grid.Row="4" Grid.Column="1" Margin="10,1,10,3" Content = "Изменить выбор" VerticalAlignment="Top"></Button>
-        <Button Grid.Row="4" Grid.Column="1"  Margin="10,23,10,0" Content = "Удалить" VerticalAlignment="Top"></Button>
+        <Button x:Name="Change_your_" Grid.Row="4" Grid.Column="1" Margin="10,1,10,3" Content = "Изменить выбор" VerticalAlignment="Top" Click="Change_click"></Button>
+        <Button Grid.Row="4" Grid.Column="1"  Margin="10,23,10,0" Content = "Удалить" VerticalAlignment="Top" Click="Delete_Click_1"></Button>
         <TextBlock x:Name="Balance_status" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Text ="Сумма: 0 "></TextBlock>
+        <Button Grid.Column="1" Content="Button" HorizontalAlignment="Left" Margin="63,83,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click"/>
 
-        
-    
-    
-    
+
+
+
+
     </Grid>
 </Window>
